--- a/KMS.EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/KMS.EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
     <meta name="description" content="The description of my page" />
 </head>
@@ -33,8 +34,9 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/scripts/jquery-ui.min.js"></script>
     <script src="~/scripts/script.js"></script>
+    @RenderSection("script",required:false)
 </body>
 </html>
