--- a/KMS.EmployeeManagement/Views/Shared/_404.cshtml
+++ b/KMS.EmployeeManagement/Views/Shared/_404.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model System.String
+﻿@model System.String
 @{
     ViewBag.Title = "404";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,8 +6,8 @@
 
 <section class="span12">
     <p class="container-404">
-        <img src="~/Content/img/404.jpg" width="100%"/>
+        <img src="~/Content/img/404.jpg" width="100%" />
     </p>
     <hr />
-        @Html.ActionLink("Back to index", "GetAll", null, new { @class = "btn btn-primary btn-block" })
+        @Html.ActionLink("Back to index", "GetAll", "Employee", null, new { @class = "btn btn-primary btn-block" })
 </section> 
