--- a/KMS.EmployeeManagement/Views/Employee/NewEmployee.cshtml
+++ b/KMS.EmployeeManagement/Views/Employee/NewEmployee.cshtml
@@ -1,64 +1,60 @@
 ﻿@model KMS.EmployeeManagement.Models.Employee
 @{
-    ViewBag.Title = "NewEmployee";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div id="btnBack">
-    @Html.ActionLink("Go Back", "GetAll", null, new { @class = "btn btn-primary" })
-</div>
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h3 class="panel-title">Add new employee</h3>
+<div class="row">
+    <div id="btnBack">
+        @Html.ActionLink("Go Back", "GetAll", null, new { @class = "btn btn-primary" })
     </div>
-    <div class="panel-body col-md-12">
-        <form id="addNewEmployeeForm">
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div id="addNewForm">
-                <div class="form-group input-group col-md-6 ">
-                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })<br />
-                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger", @style = "margin-top:4%" })
-                </div>
-                <div class="form-group input-group col-md-6 ">
-                    @Html.LabelFor(model => model.MiddleName, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.EditorFor(model => model.MiddleName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Middle Name" } })
-                </div>
-                <div class="form-group input-group col-md-6 ">
-                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Last Name" } })<br />
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger", @style = "margin-top:4%" })
-                </div>
-                <div class="form-group input-group col-md-6 ">
-                    @Html.LabelFor(model => model.DOB, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { type = "date", @class = "form-control" } })<br />
-                    @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger", @style = "margin-top:4%" })
-                </div>
-                <div class="form-group input-group col-md-6 ">
-                    @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type = "date", @class = "form-control" } })<br />
-                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger", @style = "margin-top:4%" })
-                </div>
-                <div class="form-group col-md-6 input-group">
-                    @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "input-group-addon" })
-                    @Html.DropDownListFor(model => model.Gender, new SelectList(
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Add new employee</h3>
+        </div>
+        <div class="panel-body col-md-12">
+            <form id="addNewEmployeeForm" method="post">
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div id="addNewForm">
+                    <div class="form-group input-group col-md-6 ">
+                        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })
+                        @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger pull-right", @style = "margin-top:2%" })
+                    </div>
+                    <div class="form-group input-group col-md-6 ">
+                        @Html.LabelFor(model => model.MiddleName, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.EditorFor(model => model.MiddleName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Middle Name" } })
+                    </div>
+                    <div class="form-group input-group col-md-6 ">
+                        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Last Name" } })
+                        @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger pull-right", @style = "margin-top:2%" })
+                    </div>
+                    <div class="form-group input-group col-md-6 ">
+                        @Html.LabelFor(model => model.DOB, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger pull-right", @style = "margin-top:2%" })
+                    </div>
+                    <div class="form-group input-group col-md-6 ">
+                        @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type = "date", @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger pull-right", @style = "margin-top:2%" })
+                    </div>
+                    <div class="form-group col-md-6 input-group">
+                        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "input-group-addon" })
+                        @Html.DropDownListFor(model => model.Gender, new SelectList(
                         new List<Object>
                         {
                             new { value = "false" ,text="Female" },
                             new { value = "true" ,text="Male" },
                         }, "value", "text"
-                    ), new { @class = "form-control" })<br />
-                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger", @style = "margin-top:4%" })
+                    ), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Gender, "", new { @id = "message", @class = "text-danger pull-right", @style = "margin-top:2%" })
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-12 input-group" id="btnNew">
-                <button type="submit" class="btn btn-primary btn-block" id="addNewEmployee">Add</button>
-            </div>
-        </form>
+                <div class="col-md-12 input-group" id="btnNew">
+                    <button type="submit" class="btn btn-primary btn-block" id="addNewEmployee">Add</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
-@section script{
-    <script src="~/scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/scripts/jquery.validate.min.js"></script>
-    <script src="~/scripts/jquery.validate.unobtrusive.min.js"></script>
-}
