--- a/KMS.EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/KMS.EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -35,7 +35,8 @@
         </footer>
     </div>
     <script src="~/scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/scripts/jquery-ui.min.js"></script>
+    <script src="~/scripts/jquery.validate.min.js"></script>
+    <script src="~/scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/scripts/script.js"></script>
     @RenderSection("script",required:false)
 </body>
