--- a/KMS.EmployeeManagement/Views/Shared/Error.cshtml
+++ b/KMS.EmployeeManagement/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HandleErrorInfo
+@{
     ViewBag.Title = "Error";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -12,7 +13,7 @@
         <br>
         <div class="col-lg-6 col-lg-offset-3">
             <div class="btn-group btn-group-justified">
-               @Html.ActionLink("Back to index", "GetAll", "Employee", null, new { @class = "btn btn-primary btn-block" })
+                @Html.ActionLink("Back to index", "GetAll", "Employee", null, new { @class = "btn btn-primary btn-block" })
             </div>
         </div>
     </div>
