Remove ajax for details view

--- a/KMS.EmployeeManagement/Views/Employee/EmployeeList.cshtml
+++ b/KMS.EmployeeManagement/Views/Employee/EmployeeList.cshtml
@@ -32,7 +32,7 @@
                             else
                             {<p>Female</p>}
                         </td>
-                        <td><a class="btn btn-info detailsBtn" data-id="@employee.ID">Details</a></td>
+                        <td><a class="btn btn-info" href="/Employee/EmployeeDetail/@employee.ID">Details</a></td>
                         <td><a href="/Employee/UpdateEmployee/@employee.ID" class="btn btn-danger btn-update" data-id="@employee.ID">Update</a></td>
                         <th><input type="checkbox" class="form-control" value="@employee.ID" name="employeeID" /></th>
                     </tr>
